<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/menu"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/done_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/done_menu"
                android:title="@string/dones"
                app:showAsAction="never" />
            <item
                android:id="@+id/info_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/info_menu"
                android:title="@string/info"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>